--- a/public/landing/index.html
+++ b/public/landing/index.html
@@ -3,27 +3,97 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="../assets/css/index.css" type="css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <!-- Font Awesome -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
-    <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
-    <title>Expedity</title>
+    <style>
+        body {
+            background-color: #4c82d4;
+            color: #fff;
+            font-family: Arial, sans-serif;
+        }
+        .header {
+            text-align: center;
+            padding: 20px;
+            background-color: #002444;
+        }
+        .header h1 {
+            margin: 0;
+            font-size: 2.5rem;
+        }
+        .main-title {
+            text-align: center;
+            margin: 20px auto;
+            padding: 10px;
+            border: 2px solid transparent;
+            color: #fff;
+        }
+        .cards {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            margin: 20px;
+        }
+        .card {
+            background-color: #002444;
+            color: #fff;
+            border-radius: 15px;
+            padding: 20px;
+            width: 300px;
+            text-align: center;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        }
+        .card h3 {
+            font-size: 1.5rem;
+            margin-bottom: 15px;
+        }
+        .card p {
+            font-size: 1rem;
+            margin-bottom: 20px;
+        }
+        .btn {
+            background-color: #4c82d4;
+            color: #fff;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            text-decoration: none;
+        }
+        .btn:hover {
+            background-color: #0056b3;
+        }
+    </style>
+    <title>TMD - Simplify Your Data Center</title>
 </head>
 <body>
-    <h1>Sign In</h1>
+    <div class="header">
+        <h1>TMD</h1>
+        <p>Explore a world driven by innovation</p>
+    </div>
 
+    <div class="main-title">
+        <h2>Simplify your data center</h2>
+        <p>Proxmox delivers powerful, enterprise-grade solutions with full access to all functionality for everyone - highly reliable and secure. The software-defined and open platforms are easy to deploy, manage and budget for.</p>
+    </div>
 
-
-
-
-
-
+    <div class="cards">
+        <div class="card">
+            <h3>Simplify your data center</h3>
+            <p>Proxmox delivers powerful, enterprise-grade solutions with full access to all functionality for everyone - highly reliable and secure. The software-defined and open platforms are easy to deploy, manage and budget for.</p>
+            <a href="#" class="btn">Learn more</a>
+        </div>
+        <div class="card">
+            <h3>Simplify your data center</h3>
+            <p>Proxmox delivers powerful, enterprise-grade solutions with full access to all functionality for everyone - highly reliable and secure. The software-defined and open platforms are easy to deploy, manage and budget for.</p>
+            <a href="#" class="btn">Learn more</a>
+        </div>
+        <div class="card">
+            <h3>Simplify your data center</h3>
+            <p>Proxmox delivers powerful, enterprise-grade solutions with full access to all functionality for everyone - highly reliable and secure. The software-defined and open platforms are easy to deploy, manage and budget for.</p>
+            <a href="#" class="btn">Learn more</a>
+        </div>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
-
