--- a/public/landing/index.html
+++ b/public/landing/index.html
@@ -1,99 +1,130 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <title>TMD - Landing</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
-            background-color: #4c82d4;
-            color: #fff;
-            font-family: Arial, sans-serif;
+            background-color: #0b0b2c;
+            color: #ffffff;
+            font-family: 'Poppins', sans-serif;
         }
-        .header {
+
+        .navbar {
+            background: linear-gradient(90deg, #002444, #004080);
+            padding: 15px;
+        }
+
+        .navbar-brand img {
+            height: 50px;
+        }
+
+        .navbar-nav .nav-link {
+            color: #ffffff !important;
+            transition: color 0.3s;
+        }
+
+        .navbar-nav .nav-link:hover {
+            color: #55adea !important;
+        }
+
+        .hero {
             text-align: center;
-            padding: 20px;
-            background-color: #002444;
+            padding: 100px 20px;
+            background: linear-gradient(135deg, #001f3f, #004080);
+            border-radius: 10px;
+            margin: 30px;
+            box-shadow: 0px 4px 10px rgba(85, 173, 234, 0.5);
         }
-        .header h1 {
-            margin: 0;
-            font-size: 2.5rem;
+
+        .hero h1 {
+            font-size: 3rem;
+            font-weight: 700;
         }
-        .main-title {
-            text-align: center;
-            margin: 20px auto;
-            padding: 10px;
-            border: 2px solid transparent;
-            color: #fff;
-        }
-        .cards {
-            display: flex;
-            justify-content: center;
-            gap: 20px;
-            margin: 20px;
-        }
-        .card {
-            background-color: #002444;
-            color: #fff;
-            border-radius: 15px;
-            padding: 20px;
-            width: 300px;
-            text-align: center;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        }
-        .card h3 {
-            font-size: 1.5rem;
-            margin-bottom: 15px;
-        }
-        .card p {
-            font-size: 1rem;
+
+        .hero p {
+            font-size: 1.2rem;
             margin-bottom: 20px;
         }
-        .btn {
-            background-color: #4c82d4;
-            color: #fff;
-            padding: 10px 20px;
+
+        .btn-primary {
+            background-color: #55adea;
             border: none;
-            border-radius: 5px;
-            text-decoration: none;
+            transition: background 0.3s;
         }
-        .btn:hover {
-            background-color: #0056b3;
+
+        .btn-primary:hover {
+            background-color: #115e87;
+        }
+
+        .info-box {
+            background-color: #002444;
+            padding: 20px;
+            border-radius: 10px;
+            margin: 20px 0;
+            box-shadow: 0px 4px 10px rgba(85, 173, 234, 0.3);
+            transition: transform 0.3s;
+        }
+
+        .info-box:hover {
+            transform: translateY(-5px);
         }
     </style>
-    <title>TMD - Simplify Your Data Center</title>
 </head>
+
 <body>
-    <div class="header">
-        <h1>TMD</h1>
-        <p>Explore a world driven by innovation</p>
+    <nav class="navbar navbar-expand-lg">
+        <div class="container">
+            <a class="navbar-brand" href="#">
+                <img src="../assets/img/logo.PNG" alt="TMD Logo">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Product</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">About Us</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">FAQs</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <div class="hero">
+        <h1>Welcome to TMD</h1>
+        <p>Innovative technology solutions for the future.</p>
+        <a href="#" class="btn btn-primary">Learn More</a>
     </div>
 
-    <div class="main-title">
-        <h2>Simplify your data center</h2>
-        <p>Proxmox delivers powerful, enterprise-grade solutions with full access to all functionality for everyone - highly reliable and secure. The software-defined and open platforms are easy to deploy, manage and budget for.</p>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4">
+                <div class="info-box">
+                    <h3>Cutting-Edge Tech</h3>
+                    <p>Stay ahead with our innovative solutions tailored for the digital era.</p>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="info-box">
+                    <h3>Secure & Reliable</h3>
+                    <p>We prioritize security and reliability in all our products.</p>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="info-box">
+                    <h3>Scalability</h3>
+                    <p>Grow with confidence—our solutions are built to scale with your needs.</p>
+                </div>
+            </div>
+        </div>
     </div>
 
-    <div class="cards">
-        <div class="card">
-            <h3>Simplify your data center</h3>
-            <p>Proxmox delivers powerful, enterprise-grade solutions with full access to all functionality for everyone - highly reliable and secure. The software-defined and open platforms are easy to deploy, manage and budget for.</p>
-            <a href="#" class="btn">Learn more</a>
-        </div>
-        <div class="card">
-            <h3>Simplify your data center</h3>
-            <p>Proxmox delivers powerful, enterprise-grade solutions with full access to all functionality for everyone - highly reliable and secure. The software-defined and open platforms are easy to deploy, manage and budget for.</p>
-            <a href="#" class="btn">Learn more</a>
-        </div>
-        <div class="card">
-            <h3>Simplify your data center</h3>
-            <p>Proxmox delivers powerful, enterprise-grade solutions with full access to all functionality for everyone - highly reliable and secure. The software-defined and open platforms are easy to deploy, manage and budget for.</p>
-            <a href="#" class="btn">Learn more</a>
-        </div>
-    </div>
-
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
